Contract Configurator 1.2.0
- Added activeUniqueValue flag for DATA nodes to check unique values for active/offered contracts only.
- Fixed uniqueValue in DATA nodes to work with Vessels.
- Fixed issue where ContractComplete throws errors if the related contract didn't load.
- Lots of fixes to science expression internals.
- Minor bug fixes.

Contract Configurator 1.1.3
- Fix additional case where uniqueValue can cause an exception (thanks MikeSalvatierra).
- Add RemainingScience method to Biome class.
- Various minor science changes.
- Various minor bug fixes.

Contract Configurator 1.1.2
- Fix major issue with uniqueValue in DATA nodes - again (fixes issues in ScanSat Lite).
- Minor fixes to ExpressionParser.
- Minor fixes to CollectScience.

Contract Configurator 1.1.1
- Add NoRandomContractMentality to use when creating Agents to prevent them from being assigned to random contracts (thanks amorymeltzer).
- Fix major issue with uniqueValue in DATA nodes (fixes issues in ScanSat Lite).

Contract Configurator 1.1.0
- Lots of support in expression language for science stuff (big thanks to xEvilReeperx and DMagic for support and sample code)
    - Added Biome as a valid expression class.
    - Added ScienceExperiment as a valid expression class.
    - Added ScienceSubject as a valid expression class.
    - Added new method for getting all biomes of a celestial body.
    - Tracking of difficult biome/situation combinations (eg. Splashed down in the mountains).
- Reduce amount of Contract Configurator contracts offered so to not overwhelm stock contracts quite so much.
- Added HasAstronaut contract parameter.
- Renamed HasCrew requirement to HasAstronaut.
- Improvements to vessel tracking for TargetDestroyed (thanks chlue).
- Lots of fixes/improvements to CollectScience parameter.
- Orbital scanning
    - Added PerformOrbitalSurvey parameter.
    - Added PerformOrbitalSurvey requirement.
    - Added IsOrbitalSurvey() method for CelestialBody.
- Misc expression changes