@@ -2,6 +2,7 @@ Contract Configurator 1.2.0
 - Added activeUniqueValue flag for DATA nodes to check unique values for active/offered contracts only.
 - Fixed uniqueValue in DATA nodes to work with Vessels.
 - Fixed issue where ContractComplete throws errors if the related contract didn't load.
+- Fixed issue with defaulting of targetBody on behaviours when an expression was used for the main targetBody.
 - Lots of fixes to science expression internals.
 - Minor bug fixes.
 
